CheckStyle: new Integer(foo) become Integer.valueOf(foo)